--- a/Clase 3/ejemplo.html
+++ b/Clase 3/ejemplo.html
@@ -32,7 +32,81 @@
         <li>Item x</li>
         <li>Item 2</li>
         <li>Item 3</li>
-    </ol>  
+    </ol> 
+    <h2> Ejemplo etiqueta a </h2> 
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo laborum 
+        sed deleniti nemo voluptatibus repellendus tempora animi necessitatibus autem.
+        Nam numquam doloribus eos perferendis quam tempora ut voluptatum libero 
+        odit!  <a href="https://aulasvirtuales.frba.utn.edu.ar/course/view.php?id=27078" target="_blank">  AQUI</a></p>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo laborum 
+        sed deleniti nemo voluptatibus repellendus tempora animi necessitatibus autem.
+        Nam numquam doloribus eos perferendis quam tempora ut voluptatum libero 
+        odit!  <a href="formulario.html">Formulario</a></p>
+
+<h2>TRABAJAMOS CON IMAGENES</h2>
+<img src="dipper.jpg" alt="dipper">
+<img src="Imagenes/casa.jpg" alt="casa">
+<br><br>
+<img src="https://fakeimg.pl/300x200" alt="">
+
+
+<h2>Ejemplos de tablas </h2>
+<table border="1">
+    <tr>
+        <td>Celda 1</td>
+        <td>Celda 2</td>
+        <td>Celda 3</td>
+    </tr>
+    <tr>
+        <td>Celda 4</td>
+        <td>Celda 5</td>
+        <td>Celda 6</td>
+    </tr>
+    <tr>
+        <td>Celda 7</td>
+        <td>Celda 8</td>
+        <td>Celda 9</td>
+    </tr>
+</table>
+<h2>otro ejemplos</h2>
+<table border="1">
+    <tr>
+        <th colspan="3">TITULO</th>
+    </tr>
+    <tr>
+        <td> Celda 1</td>
+        <td>Celda 2</td>
+        <td>Celda 3</td>
+    </tr>
+    <tr>
+        <td>Celda 4</td>
+        <td>Celda 5</td>
+        <td>Celda 6</td>
+    </tr>
+</table>
+
+<h2>otro ejemplos </h2>
+<table border="1"> 
+    <tr>
+        <th rowspan="3"> 2023 </th><!-- aqui se cambia el TD POR TH lo pone como titulo-->
+        <td> Celda 2 </td>
+        <td> Celda 3 </td>
+    </tr>
+    <tr>
+        <td> Celda 5</td>
+        <td> Celda 6</td>
+    </tr>
+    <tr>
+        <td> Celda 8</td>
+        <td> Celda 9</td>
+    </tr>
+</table>
+
+
+
+
+
 
 
     
